ros2_ws/log/build_2024-03-25_17-10-11/metrojoe/stderr.log
  File "/ros2_ws/install/metrojoe/lib/python3.10/site-packages/metrojoe/ds4_gamepad_node.py", line 4
    from 
         ^
SyntaxError: invalid syntax

